<resources>
    <string name="app_name">VegetarianRes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_menu_order">Order</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_ingredients">Ingredients</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_calories">Calories</string>
    <string name="title_protein">Protein</string>
    <string name="title_total_fat">Total Fat</string>
    <string name="title_total_carbs">Total Carbs</string>
    <string name="title_recipe">RECIPES</string>
    <string name="title_recipe_video">VIDEO RECIPES</string>
    <string name="title_extras">EXTRAS</string>
    <string name="title_quantity">QUANTITY</string>
</resources>
